# auto-hashcat-benchmark

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  Justfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
container/: Dockerfile  entrypoint.sh
data/: gpu-models.json
docs/superpowers/plans/: 2026-04-25-hashcat-benchmarks.md
docs/superpowers/specs/: 2026-04-25-hashcat-benchmarks-design.md
site/: index.html  package-lock.json  package.json  vite.config.js
site/public/: index.json
site/src/: App.svelte  app.css  main.js
site/src/lib/: CompareView.svelte  ExportButton.svelte  FilterBar.svelte  TableView.svelte  ThemePicker.svelte  data.js  format.js  themes.js
src/hashcat_bench/: __init__.py  cli.py  data.py  estimator.py  gpu_catalog.py  hashcat.py  models.py  parser.py  provider.py  runner.py
tests/: test_add_gpu.py  test_cli.py  test_data.py  test_estimator.py  test_hashcat.py  test_models.py  test_parser.py  test_provider.py  test_runner.py
tests/fixtures/: hashcat_machine_readable.txt
