[project]
name = "hashcat-bench"
version = "0.1.0"
description = "Automated hashcat GPU benchmark orchestrator"
requires-python = ">=3.12"
dependencies = [
    "vastai>=1.0",
    "paramiko>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=4.0",
]

[project.scripts]
hashcat-bench = "hashcat_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
